Sample class code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "testreg": "nodemon --exec dart ./bin/regularexpression.dart",
     "testassert": "nodemon --exec dart --enable-asserts ./bin/testAssert.dart",
-    "testset": "nodemon --exec dart ./bin/testset.dart"
+    "testset": "nodemon --exec dart ./bin/testset.dart",
+    "testmap": "nodemon --exec dart ./bin/testmap.dart",
+    "testclass": "nodemon --exec dart ./bin/testclass.dart"
   },
   "keywords": [],
   "author": "",
